public/css/styles.css
/* General Styles------------------------------------ */
html,
body {
  width: 100%;
  height: 100%;
}



/*Dashboard Styles ------------------------------------*/
.dashboard-container {
  height: 100%;
}
.dashboard-banner {
  margin: 0;
  position: relative;
  bottom: 5px;
  padding: 0;
  height: auto;
  display: flex;
  flex-direction: row;
  overflow: hidden;
  font-family: "Montserrat", sans-serif;
}
.dashboard-text {
  position: relative;
  margin-top: 3%;
  line-height: 35px;
  font-size: 15px;
  font-weight: bold;
}
.dashboard-user-credentials {
  float: left;
  padding: 0;
  width: 50%;
  font-size: 10px;
  line-height: 28px;
  color: white;
}
.dashboard-icon,
.dashboard-toggle-icon {
  margin: 0;
  position: relative;
  text-align: center;
  font-size: 35px;
  top: 5px;
  padding-left: 0;
  margin-right: 15px;
  float: left;
  min-width: 55px;
}
.dashboard-sidebar-container {
  padding: 0;
  margin: 0;
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 15%;
  box-sizing: initial;
}
.dashboard-side-bar {
  margin: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 5px;
  position: relative;
  display: block;
  overflow: hidden;
  padding-left: 0px;
  background-color: #0a0bc4;
  transition: width 0.5s;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
.dashboard-side-bar.minimized {
  width: 60px;
}
.dashboard-side-bar li {
  list-style: none;
  line-height: 55px;
  max-height: 55px;
  position: relative;
  width: 100%;
  font-family: "Montserrat", sans-serif;
  text-align: center;
  overflow: hidden;
}
.dashboard-side-bar li:nth-child(1) {
  border-bottom: 3px solid white;
  display: flex;
  flex-direction: row;
}
.dashboard-side-bar li a {
  text-decoration: none;
  width: 100%;
  position: relative;
  font-size: 18px;
  display: block;
  display: flex;
  color: white;
}
.dashboard-side-bar li a .text {
  font-size: 14px;
  min-width: 20%;
  padding-top: 5px;
}
.dashboard-side-bar li .option.active {
  color: black;
  background-color: white;
}
.dashboard-side-bar li:hover a {
  background-color: white;
  color: black;
}
.dashboard-side-bar li:hover a img {
  filter: brightness(0);
}
.dashboard-side-bar li:hover a .link-icon i {
  color: black;
}
.dashboard-link-icon-img {
  position: relative;
  width: 20px;
  height: 25px;
  min-width: 25px;
  border-collapse: collapse;
}
.dashboard-img-active {
  filter: brightness(0);
}
.dashboard-link-icon {
  min-width: 50px;
  margin-top: 8px;
  font-size: 20px;
  margin-right: 25px;
}
/* registration form styles -------------------------------*/

.register-container {
  height: 100%;
  position: relative;
}

.register-wrapper {
  height: auto;
  width: 40%;
  background-color: white;
  position: absolute;
  top: 10%;
  left: 30%;
  border-radius: 25px;
  padding: 30px;
}

.register-verification-wrapper {
  height: auto;
  width: 30%;
  background-color: white;
  position: absolute;
  top: 20%;
  left: 35%;
  border-radius: 25px;
  padding: 30px;
}

.register-email-img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: 30%;
  width: 30%;
}


/* login-page styles -------------------------------- */

.login-body {
  background: linear-gradient(
    90deg,
    rgba(71, 41, 240, 1) 0%,
    rgba(71, 41, 240, 1) 50%,
    rgba(255, 255, 255, 1) 50%
  );

  display: flex;
}

.login-img-fluid {
  height: 100%;
  width: 100%;

  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.login-card {
  border-width: 0;

}

.login-main {
  margin: auto;
}

/* this is used to change the bodybackground color in spesific resolution */
@media (max-width: 576px) {
  .login-body {
    background: rgba(71, 41, 240, 1);
  }
}

.login-btn-signup {
  color: rgba(71, 41, 240, 1);
  border-color: rgba(71, 41, 240, 1);

  letter-spacing: 5px;

  transition: 0.4s ease-in-out;
}

.login-btn-signup:hover {
  background-color: rgba(71, 41, 240, 1);
  border-color: rgb(47, 26, 161);

  letter-spacing: 8px;
}

.login-btn-signup:active {
  transition: 50ms ease-in;
}

